# ESP32-S3-OBD2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  _ref_lib_tree.json  _ref_src_tree.json  rebuild.bat  sdkconfig.defaults
.cursor/rules/: ble-elm327-stability.mdc  changelog.mdc
docs/: GELISTIRME_KURALLARI.md
esp-ard/: KURULUM_SENARYOLARI.md  README.md  esp32_s3_obd2_full_plan.md  flash.ps1  full_capture.txt  platformio.ini  read_serial.ps1  serial_capture.txt  serial_reader.py  temp_error.txt
esp-ard/boards/: BOARD_WAVESHARE_ESP32_S3_TOUCH_LCD_2_1.json
esp-ard/fonts/: README.md
esp-ard/include/: app_logger.h  app_storage.h  config.h  dashboard_ui.h  display_hal.h  elm327_client.h  gauge_ui.h  obd_extras.h  obd_formulas.h  obd_parse.h  obd_service.h  obd_wifi_profiles.h  splash_ui.h  ui_fonts.h  ui_theme.h  vehicle_info_ui.h  wifi_manager.h  wifi_menu_ui.h
esp-ard/scripts/: dump_log.ps1
esp-ard/src/: app_logger.cpp  app_storage.cpp  dashboard_ui.cpp  display_hal.cpp  elm327_client.cpp  gauge_ui.cpp  lv_conf.h  lvgl_v8_port.cpp  main.cpp  (+9 more)
esp-obd/: .gitignore  TODO.md  monitor_output.txt  platformio.ini
esp32-obd2-monitor/: CHANGELOG.md  CMakeLists.txt  README.md  UPLOAD.md  build_flash.ps1  build_flash.sh  sdkconfig.defaults  ui-demo.html
esp32-obd2-monitor/components/display/: CMakeLists.txt  display.c  display.h
esp32-obd2-monitor/components/display/fonts/: README.md  font_gauge_128.c  font_gauge_96.c  font_icons_24.c  font_icons_28.c  font_ui_12.c  font_ui_14.c  font_ui_16.c  font_ui_20.c  gen_fonts.ps1  package.json  ui_charset.txt
esp32-obd2-monitor/components/display/lvgl_port/: board_config.h  cst820_touch.c  cst820_touch.h  lvgl_driver.c  lvgl_driver.h  tca9554_expander.c  tca9554_expander.h
esp32-obd2-monitor/components/display/ui/: bt_settings_ui.c  bt_settings_ui.h  dashboard.c  dashboard.h  gauge.c  gauge.h  haptic.c  haptic.h  splash.c  splash.h  styles.c  styles.h  ui_fonts.h  ui_icons.c  ui_icons.h  wifi_settings_ui.c  wifi_settings_ui.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/bsp/: bsp.h  bsp_display.cpp  lvgl_v8_port.cpp  lvgl_v8_port.h
main/data/: app_log.c  app_log.h  vehicle_data.c  vehicle_data.h  vehicle_profile.c  vehicle_profile.h
main/imu/: imu_data.c  imu_data.h  qmi8658.c  qmi8658.h
main/obd/: ble_obd.c  elm327.c  elm327.h  obd_dtc.c  obd_pids.c  obd_pids.h
main/ui/: lv_font_montserrat_56.c  lv_font_montserrat_72_bold.c  lv_font_montserrat_94_bold.c  screen_connect.c  screen_dash.c  screen_dtc.c  screen_grid.c  screen_gyro.c  screen_gyro.h  screen_settings.c  screen_splash.c  screen_splash.h  theme.c  theme.h  ui.c  ui.h
scripts/: extract_old_strings.py  extract_writes.py  revert_ba3bbf10.py  revert_jun11.py  verify_round_lcd_layout.py
simulator/: README.md  build_simulator.cmd
(+112 files in other folders)
